GL/Projet_GL/src/test/deca/syntax/invalid/sansObjet/if_without_body.deca
// Test : syntax_invalid_if_without_body
// But : interdire un if sans bloc associé.
// Type d'erreur : erreur syntaxique
// Résultat attendu : erreur de syntaxe.

{
    if (true)
}